dev: poc :host styles issue in Stencil with Shadow DOM

--- a/package.json
+++ b/package.json
@@ -33,13 +33,14 @@
   ],
   "scripts": {
     "build": "stencil build",
-    "start": "stencil build --dev --watch --serve",
+    "start": "npm run build && npm run prerender && stencil build --dev --watch --serve",
     "test": "stencil test --spec --e2e",
     "test.watch": "stencil test --spec --e2e --watchAll",
-    "generate": "stencil generate"
+    "generate": "stencil generate",
+    "prerender": "node ./src/prerender.js"
   },
   "devDependencies": {
-    "@stencil/core": "^4.7.0",
+    "@stencil/core": "4.19.0",
     "@types/jest": "^29.5.6",
     "@types/node": "^16.18.11",
     "jest": "^29.7.0",
